@@ -1,32 +1,24 @@
 package com.kitm.library.backend.domain.role;
 
+import com.kitm.library.backend.domain.role.dto.CreateRoleDto;
+import com.kitm.library.backend.domain.role.dto.RoleDto;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.Collection;
-import java.util.UUID;
+import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * @author votuscode (https://github.com/votuscode)
  * @version 1.0
  * @since 24.09.21
  */
+@Tag(name = "Role")
 @RestController
-@RequestMapping("/api/role")
+@RequestMapping(path ="/api/role")
 public class RoleController {
-  record RoleDto(
-      UUID id,
-      String name
-  ) {
-    public static RoleDto from(RoleEntity roleEntity) {
-      return new RoleDto(roleEntity.getId(), roleEntity.getName());
-    }
-  }
-
-  public static record CreateRoleDto(String name) {
-  }
-
   private final RoleService roleService;
 
   @Autowired
@@ -34,14 +26,16 @@ public class RoleController {
     this.roleService = roleService;
   }
 
-  @GetMapping
-  public Collection<RoleDto> findAll() {
-    return roleService.findAll().stream().map(RoleDto::from).toList();
+  @GetMapping("/")
+  public List<RoleDto> findAll() {
+    return roleService.findAll().stream()
+        .map(RoleDto::from)
+        .collect(Collectors.toList());
   }
 
-  @PostMapping
+  @PostMapping("/")
   public ResponseEntity<RoleDto> createOne(@RequestBody CreateRoleDto createRoleDto) {
-    final RoleEntity roleEntity = roleService.createOne(createRoleDto.name);
+    final RoleEntity roleEntity = roleService.createOne(createRoleDto.getName());
     return ResponseEntity.ok(RoleDto.from(roleEntity));
   }
 }
